# prologd

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.md  PrologD.cpp  PrologD.h  README.md  Russian.qm  Russian.ts  main.cpp  prologd-help.html  prologdc.cpp
compiled/: prologd
docker/: Dockerfile  docker-compose.yml
examples/: drawing.pld  factorial.pld  file_io.pld  monk.pld  monkd.pld  ranez.pld
examples/lessons/: lesson 1.pld  lesson 2.pld  lesson 3.pld  lesson 4.pld  lesson 5.pld  lesson 6.pld  lesson 8.pld  lesson 9.pld
gui/: AboutProgram.cpp  AboutProgram.h  Actions.cpp  Actions.h  Editor.cpp  Graphics.cpp  Graphics.h  Highlighter.cpp  MainWindow.cpp  MainWindow.h  Settings.cpp  TextFinder.h
prlib/: CMakeLists.txt  control.cpp  control.h  err.h  extfunc.cpp  extfunc.h  functions.cpp  functions.h  pdefs.h  pstructs.cpp  pstructs.h  scaner.cpp
scripts/: build
src/: CMakeLists.txt  PrologD.cpp  PrologD.h  PrologD.pro  icon.rc  preprocessor.cpp  preprocessor.h  prologd-help.html  prologdc.cpp  res.qrc
src/examples/: drawing.pld  factorial.pld  file_io.pld  monk.pld  ranez.pld
src/examples/lessons/: lesson 1.pld  lesson 2.pld  lesson 6.pld  lesson 8.pld  lesson 9.pld
src/gui/: AboutProgram.cpp  AboutProgram.h  Actions.cpp  Actions.h  Editor.cpp  Editor.h  Graphics.cpp  Graphics.h  Highlighter.cpp  Highlighter.h  MainWindow.cpp  MainWindow.h  Settings.cpp  Settings.h  TextFinder.cpp  TextFinder.h
src/prlib/: CMakeLists.txt  control.cpp  control.h  err.cpp  err.h  extfunc.cpp  extfunc.h  functions.cpp  functions.h  helper.h  pdefs.h  prlib_config.h.in  pstructs.cpp  pstructs.h  scaner.cpp  scaner.h
